--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.7.9",
     "google-map-react": "^2.2.1",
     "gsap": "^3.12.7",
+    "pannellum": "^2.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.1.3",
     "three": "^0.172.0"
   },
